# toml_i18n

./: .gitignore  LICENSE  README.md  pyproject.toml  test.py
.ai-docs/: tomli.md
tests/: text_toml_i18n.py
toml_i18n/: __init__.py  toml_i18n.py
