[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toml_i18n"
version = "1.0.7"
description = "A lightweight localization module for Python projects"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Arved Klöhn", email = "arved.kloehn@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "tomli; python_version<'3.11'"
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/Redundando/toml_i18n"
Repository = "https://github.com/Redundando/toml_i18n"